package lab4;

public interface Alive {
    void move();
}
