package lab4;

public interface Attack {
    void confrontation(String victim);
}
