package lab4;

public class IllegalAwardDeny extends Exception {
    public IllegalAwardDeny(String message) {
        super(message);
    }
}
