package lab4;

public class MuteException extends RuntimeException {
    public MuteException(String message) {
        super(message);
    }
}
